06-services/06-03-api/overlays/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ladesa-ro-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: ladesa-ro-api
          image: "registry.ladesa.com.br/api:development"
