06-services/06-03-api/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ladesa-ro-api-ingress
spec:
  rules:
    - host: "dev.ladesa.com.br"
      http:
        paths:
          - path: /api/
            pathType: ImplementationSpecific
            backend:
              service:
                name: ladesa-ro-api
                port:
                  name: web
